RESOLVED FIXED292236
[text-indent] Unexpected line breaking when text-indent has negative value
https://bugs.webkit.org/show_bug.cgi?id=292236
Summary [text-indent] Unexpected line breaking when text-indent has negative value
alan
Reported 2025-04-28 19:51:02 PDT
ssia
Attachments
Patch (7.34 KB, patch)
2025-04-28 19:56 PDT, alan
no flags
[fast-cq]Patch (7.34 KB, patch)
2025-04-29 09:21 PDT, alan
no flags
alan
Comment 1 2025-04-28 19:56:50 PDT
alan
Comment 2 2025-04-29 09:21:27 PDT
Created attachment 475080 [details] [fast-cq]Patch
EWS
Comment 3 2025-04-29 13:44:12 PDT
Committed 294296@main (47cabefff98e): <https://commits.webkit.org/294296@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 475080 [details].
Radar WebKit Bug Importer
Comment 4 2025-04-29 13:45:28 PDT
Note You need to log in before you can comment on or make changes to this bug.